attempted even more fixes to allow for user input but to no avail. I'm stuck with it just dispaying city's current weather.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
 }
 
 #forecast {
-    background-color:rgb(154, 154, 207);
+    background-color:rgb(225, 225, 241);
     padding:100px;
 }
 
